@@ -17,8 +17,19 @@ attributes :<p>
 <dt><b>Visible to</b>
 <dd>The boxes checked here determine if the link is available to the master admin, domain owner and/or resellers.
 
+<dt><b>Category</b>
+<dd>If you have defined any custom categories for links (at the bottom of this page), you can select a category for each link in this column.
+
 </dl>
 
 Links can be re-ordered using the arrows in the <b>Move</b> column, if you
 have defined more than one.<p>
+
+<hr>
+
+At the bottom of the page is a form for entering or modifying categories
+for custom links. These are displayed as expandable sections in the framed
+themes, with the links chosen to be in each category appearing under the 
+section header when it is open. <p>
+
 <footer>
