@@ -66,8 +66,8 @@ elsif ($type eq "database") {
 		     $text{'databases_'.$p->{'type'}},
 		     "<tt>$p->{'dom'}</tt>");
 	}
-elsif ($type eq "links") {
-	return $text{'log_'.$action.'_links'};
+elsif ($type eq "links" || $type eq "linkcats" || $type eq "fields") {
+	return $text{'log_'.$action.'_'.$type};
 	}
 elsif ($action eq "start" || $action eq "stop" || $action eq "restart") {
 	return $text{'log_'.$action.'_'.$type};
